--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 	<head>
 		<title>Regarder True Beauty en VOSTFR</title>
 		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+		<style>
+			body {
+				font-family: 'Poppins', sans-serif;
+			}
+		</style>
 	</head>
 	
 	<body style="background-color:#FF0000;">
-	<h2> True Beauty </h2>
+	<p><font size="3" color="#000000">True Beauty2 </p>
 	
-</body>
-
-
-
-
+	</body>
 </html>
